# R-Type

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  Release-AppImage-Client.sh  Release-AppImage-Server.sh  build-linux.sh  build-windows.ps1  conanfile.txt  release-linux.sh  release-windows.ps1  vcpkg.json
Documentation/: Benchmark_Network.md
Documentation/tests/ASIO/: client.cpp  server.cpp
Documentation/tests/BSD/: client.cpp  server.cpp
Documentation/tests/winsocks/: CMakeList.txt  client.cpp  server.cpp
assets/objects/json/: Ally.json  Arrows.json  Background.json  Bullet.json  ControlsText.json  Enemy.json  GameOverMenu.json  HelpText.json  Menu.json  NameTag.json  NetworkManager.json  Player.json
assets/objects/scripts/: Arrows.cpp  Arrows.hpp  Background.cpp  Background.hpp  GameOverMenu.cpp  GameOverMenu.hpp  Menu.cpp  Menu.hpp  NetworkManager.cpp  NetworkManager.hpp
assets/scenes/json/: Game.json  GameOver.json  Scene.json
client/: ApplyDTO.cpp  ApplyDTO.hpp  CMakeLists.txt  main.cpp
client/common/: CMakeLists.txt
client/common/components/: CMakeLists.txt
client/common/event/: CMakeLists.txt
client/common/factories/: CMakeLists.txt
client/common/fields/: CMakeLists.txt
client/common/fields/groups/: CMakeLists.txt
client/common/json/: CMakeLists.txt
client/common/managers/: CMakeLists.txt  ObjectManager.cpp
client/dto/: APlayerDTO.cpp  DTOException.hpp  KeyPressedDTO.cpp  KeyPressedDTO.hpp  KeyReleasedDTO.cpp  KeyReleasedDTO.hpp  PlayerStopMoveDown.hpp  PlayerStopMoveRight.hpp
client/engine/: CMakeLists.txt  Engine.cpp
client/graphics/: CMakeLists.txt
client/graphics/components/: CMakeLists.txt  Sprite.cpp  Sprite.hpp
client/objects/json/: Ally.json  Background.json  Bullet.json  Enemy.json  Player.json  Scene.json
client/objects/scripts/: Background.cpp  Background.hpp  NetworkManager.cpp
client/physics/: CMakeLists.txt
client/physics/components/: CMakeLists.txt
documentation/: about.md  vcpkg_installation_guide.md
documentation/benchmarks/: graphical_library_benchmark.md
documentation/benchmarks/accessibility/: accessibility_benchmark.md
documentation/benchmarks/game_engine/: architecture_study.md
documentation/benchmarks/graphical_library_benchmark/: graphical_library_benchmark.md
documentation/benchmarks/graphical_library_benchmark/tests/: allegro_1000_sprites.cpp  allegro_scrolling_background.cpp  sdl_1000_sprites.cpp  sdl_scrolling_background.cpp  sfml_1000_sprites.cpp  sfml_scrolling_background.cpp
documentation/benchmarks/network/tests/ASIO/: server.cpp
documentation/benchmarks/network/tests/BSD/: client.cpp
documentation/developers/: about.md
documentation/developers/stellar_forge/: stellar_forge.md
documentation/guide/: vcpkg_installation_guide.md
includes/StellarForge/common/: IObject.hpp
includes/StellarForge/common/managers/: ObjectManager.hpp
includes/StellarForge/engine/: Engine.hpp
libs/: StellarForge.lib  StellarForgeGraphics.lib  StellarForgePhysics.lib
network/: CMakeLists.txt  NetworkException.cpp  NetworkException.hpp
network/client/: Client.cpp  Client.hpp  ISessionClient.hpp
network/protocol/: CMakeLists.txt
network/protocol/conversion/: CMakeLists.txt
network/protocol/dto/: CMakeLists.txt  DTODecoder.cpp  DTOEncoder.cpp  DTORegistry.cpp
network/protocol/dto/entity/: AEntityDTO.hpp  CMakeLists.txt  EntityTypeEnum.hpp
network/protocol/dto/game/: CMakeLists.txt  GameSpeedDTO.cpp  GameSpeedDTO.hpp  GameSpeedEnum.hpp
network/protocol/dto/player/: APlayerDTO.hpp  CMakeLists.txt
network/protocol/dto/tcp/: ATCPDTO.cpp  ATCPDTO.hpp  CMakeLists.txt  MessageTypeEnum.hpp  TCPCreateUDPEndpointDTO.cpp  TCPCreateUDPEndpointDTO.hpp  TCPMessageDTO.cpp  TCPMessageDTO.hpp  TCPSendIdDTO.cpp  TCPSendIdDTO.hpp
network/protocol/packet/: CMakeLists.txt  TCPPacket.cpp  TCPPacket.hpp
network/server/: ISessionServer.hpp  Server.cpp  Server.hpp
network/server/InternalMessage/: ClientConnected.hpp  IInternalMessageClient.hpp  ServerStarted.cpp  ServerStarted.hpp
objects/: Background.json  Player.json  Scene.json
server/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp  Random.cpp  Random.hpp  Server.cpp  Server.hpp  main.cpp
server/dto/: AEntityDTO.cpp  AEntityDTO.hpp  APlayerDTO.cpp  APlayerDTO.hpp  CMakeLists.txt  DTODecoder.cpp  DTODecoder.hpp  DTOEncoder.cpp  DTOEncoder.hpp  DTORegistry.cpp  DTORegistry.hpp  EntityCreationDTO.hpp  EntityDeletionDTO.cpp  EntityDeletionDTO.hpp  EntityPositionDTO.cpp  EntityPositionDTO.hpp  IDTO.hpp  IDTODecoder.hpp  IDTOEncoder.hpp  PlayerStartMoveDown.cpp  PlayerStartMoveDown.hpp  PlayerStartMoveLeft.cpp  PlayerStartMoveLeft.hpp  PlayerStartMoveRight.cpp  PlayerStartMoveRight.hpp  PlayerStartMoveUp.cpp  PlayerStartMoveUp.hpp  PlayerStartShoot.cpp  PlayerStartShoot.hpp  PlayerStopMoveDown.cpp  PlayerStopMoveDown.hpp  PlayerStopMoveLeft.cpp  PlayerStopMoveLeft.hpp  PlayerStopMoveRight.cpp  PlayerStopMoveRight.hpp  PlayerStopMoveUp.cpp  PlayerStopMoveUp.hpp  PlayerStopShoot.cpp  PlayerStopShoot.hpp
server/dto/entity/: EntityCreationDTO.cpp  EntityCreationDTO.hpp  EntityDeletionDTO.cpp  EntityPositionDTO.cpp  EntityPositionDTO.hpp  EntityTypeEnum.hpp
server/dto/player/: APlayerDTO.hpp  PlayerActionEnum.hpp  PlayerActionStartDTO.cpp  PlayerActionStopDTO.cpp
server/entities/: ABullet.cpp  ABullet.hpp  AEntity.cpp  AEntity.hpp  AShip.cpp  AShip.hpp  BasicEnemy.cpp  BasicEnemy.hpp  CMakeLists.txt  ClassicBullet.cpp  ClassicBullet.hpp  EntityManager.cpp  EntityManager.hpp  IEntity.hpp  Player.cpp  Player.hpp
server/utils/: BinaryVector.cpp  BinaryVector.hpp
src/: CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt
src/network/client/: Client.cpp  Client.hpp  ISessionClient.hpp  client.cpp  client.hpp
src/network/server/: ISessionServer.hpp  Server.cpp  Server.hpp  server.cpp  server.hpp
src/network/server/InternalMessage/: ClientConnected.cpp  ClientConnected.hpp  ClientDisconnected.cpp  ClientDisconnected.hpp  IInternalMessage.hpp
tests/client/: main.cpp
tests/server/: main.cpp
(+2 files in other folders)
